@@ -2,16 +2,12 @@
 //
 // $Id$
 
-// WARNING!
-// These are outside of the defines to force the compiler to recognize
-//  the SimpleTcpTransport class BEFORE the SimpleTcpAcceptor class.
-//  This is only a problem on gcc (3.4.4) on solaris x86
-#include  "SimpleTcpTransport_rch.h"
-#include  "SimpleTcpTransport.h"
+
 
 #ifndef TAO_DCPS_SIMPLETCPACCEPTOR_H
 #define TAO_DCPS_SIMPLETCPACCEPTOR_H
 
+#include  "SimpleTcpTransport_rch.h"
 #include  "SimpleTcpConnection.h"
 #include  "ace/Acceptor.h"
 #include  "ace/SOCK_Acceptor.h"
